feat: ✨ Updated backpack rendering to allow resource packs to easily override tank fluids, battery charge and where display item renders on the backpack. Also updated worn backpack rendering to render the same model that it uses for item and block and to also allow positioning / scaling of the backpack on player's back using regular item transformation settings.